# magnetic_field

./: .gitignore  Makefile  README.md  main.py  predict_magnetic_field_script.py  predict_magnetic_field_w_mlops.ipynb  predict_magnetic_field_w_mlops_refactor.ipynb  pyproject.toml  requirements.txt
datasets/most/: cadcUrlList.txt
docs/: conf.py  index.rst
magnetic_field/: config.py  data_management.py  main.py  main_with_pipeline.py  pipeline.py  predict.py  preprocessors.py  train_pipeline.py
magnetic_field/config/: config.py
magnetic_field/datasets/most/: cadcUrlList_test.txt
magnetic_field/processing/: data_management.py  preprocessors.py
